--- a/front_mobile/pubspec.yaml
+++ b/front_mobile/pubspec.yaml
@@ -23,7 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http:
+  mobx:
+  mobx_codegen:
+  flutter_mobx:
+  build_runner:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
