--- a/front_mobile/pubspec.yaml
+++ b/front_mobile/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   mobx_codegen:
   flutter_mobx:
   build_runner:
+  get_it:
+  shared_preferences:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
