--- a/front_mobile/android/app/src/main/AndroidManifest.xml
+++ b/front_mobile/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="front_mobile"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+              android:value="AIzaSyCHmsPYP42cZoURF11k_LTaN2bFc8AD2sc"/>
+        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
