--- a/front_mobile/pubspec.yaml
+++ b/front_mobile/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_maps_flutter: ^0.5.25+1
   google_maps_webservice: ^0.0.14
   google_places_flutter: 
+  
 
   get_it:
   shared_preferences:
@@ -43,6 +44,11 @@ dev_dependencies:
     sdk: flutter
   build_runner: 1.10.1
   mobx_codegen: ^1.1.0+1
+  flutter_launcher_icons: ^0.7.0
+flutter_icons: 
+  image_path: "assets/images/logo.png"
+  ios: true
+  android: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
